--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,24 +4,56 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
+    <header class="shadow-sm">
+      <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class = "container">
+          <a class = "navbar-brand pl-5 pr-16" href="/">
+            <span>Bookers</span>
+          </a>
+          <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navabarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to "Home", "/", class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "Users", "/users", class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "Books", "/books", class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "logout", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to "Home", "/", class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "About", "/about", class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "sign up", new_user_registration_path, class: 'nav-link text-light' %>
+                </li>
+                <li>
+                  <%= link_to "login", new_user_session_path, class: 'nav-link text-light' %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+    </header>
     <%= yield %>
   </body>
 </html>
