[add] profile_image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
- 
+
  @import "bootstrap";
  @import "font-awesome"
+
+ div.field, div.actions{
+  margin-bottom:10px;
+ }
