--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,6 +3,21 @@
     <div class="col-md-3">
       <h2>User info</h2>
       <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.png", size: '60x60' %>
+      <table class="table">
+        <tbody>
+          <tr>
+            <th>name</th>
+            <th><%= current_user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= current_user.introduction %></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <a class="btn btn-outline-secondary btn-block  edit_user_path" href="/users/:id/edit"><i class="fas fa-user-cog"></i></a>
+      </div>
     </div>
   </div>
 </div>
