--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,5 +19,18 @@
  @import "font-awesome"
 
  div.field, div.actions{
-  margin-bottom:10px;
+  margin-bottom: 10px;
+ }
+
+ h2{
+  margin-bottom: 8px;
+ }
+
+ label{
+  display: inline-block;
+  margin-bottom: 8px;
+ }
+
+ .form_group{
+  margin-bottom: 16px;
  }
