--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,6 +18,20 @@
       <div class="row">
         <a class="btn btn-outline-secondary btn-block  edit_user_path" href="/users/:id/edit"><i class="fas fa-user-cog"></i></a>
       </div>
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model: @book, url:'/books', local:true do |f| %>
+        <div class="form_group">
+          <label for="book_title">Title</label>
+          <input class="form-control book_title" type="text" name="book[title]" id="book_title">
+        </div>
+        <div class="form_group">
+          <label for="book_opinion">Opinion</label>
+          <textarea class=" form-control book_body" type="text" name="book[body]" id="book_body"></textarea>
+        </div>
+        <div class="form_group">
+          <%= f.submit 'Create Book', :class=>"btn btn-success" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
