--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,19 +19,36 @@
         <a class="btn btn-outline-secondary btn-block  edit_user_path" href="/users/:id/edit"><i class="fas fa-user-cog"></i></a>
       </div>
       <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book, url:'/books', local:true do |f| %>
-        <div class="form_group">
-          <label for="book_title">Title</label>
-          <input class="form-control book_title" type="text" name="book[title]" id="book_title">
-        </div>
-        <div class="form_group">
-          <label for="book_opinion">Opinion</label>
-          <textarea class=" form-control book_body" type="text" name="book[body]" id="book_body"></textarea>
-        </div>
-        <div class="form_group">
-          <%= f.submit 'Create Book', :class=>"btn btn-success" %>
-        </div>
+      <%= form_with model:@book, local:true do |f| %>
+        <label for="book_title">Title</label>
+        <%= f.text_field :title, :id=>"book_title" %>
+        <label for="book_opinion">Opinion</label>
+        <%= f.text_area :body, :id=>"book_opinion" %>
+        <%= f.submit 'Create Book', :class=>"btn btn-success" %>
       <% end %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <!--繰り返し-->
+        <% @books.each do |book| %>
+        <tbody>
+          <tr>
+            <td><%= link_to attachment_image_tag(book.user_id, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30'), users_path(book.user_id) %></td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
+            <td><%= book.body %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
     </div>
   </div>
 </div>
