--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -42,7 +42,7 @@
         <% @books.each do |book| %>
         <tbody>
           <tr>
-            <td><%= link_to attachment_image_tag(book.user_id, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30'), users_path(book.user_id) %></td>
+            <td><%= link_to attachment_image_tag(book.user, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30'), user_path(book.user.id) %></td>
             <td><%= link_to book.title, book_path(book.id) %></td>
             <td><%= book.body %></td>
           </tr>
