--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,32 +1,8 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.png", size: '60x60' %>
-      <table class="table">
-        <tbody>
-          <tr>
-            <th>name</th>
-            <th><%= current_user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th><%= current_user.introduction %></th>
-          </tr>
-        </tbody>
-      </table>
-      <div class="row">
-        <a class="btn btn-outline-secondary btn-block  edit_user_path" href="/users/:id/edit"><i class="fas fa-user-cog"></i></a>
-      </div>
-      <h2 class="mt-3">New book</h2>
-      <%= form_with model:@book, local:true do |f| %>
-        <label for="book_title">Title</label>
-        <%= f.text_field :title, :id=>"book_title" %>
-        <label for="book_opinion">Opinion</label>
-        <%= f.text_area :body, :id=>"book_opinion" %>
-        <%= f.submit 'Create Book', :class=>"btn btn-success" %>
-      <% end %>
-    </div>
+    
+    <%= render 'users/info', user: @user, book: @book %>
+    
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table table-hover table-inverse">
