--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,33 @@
-<h1>book詳細</h1>
+<div class="container">
+  <div class="row">
+    
+    <%= render 'users/info', user: @user, book: @book %>
+    
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(@bookDetail.user.id) do %>
+                <%= attachment_image_tag @bookDetail.user, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30' %><br><%= @bookDetail.user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to @bookDetail.title, book_path(@bookDetail.id) %>
+            </td>
+            <td>
+              <%= @bookDetail.body %>
+            </td>
+            <td>
+              <%= link_to "Edit", edit_book_path(@bookDetail.id), :class=>"btn btn-success btn-sm btn-block book_edit" %>
+            </td>
+            <td>
+              <%= link_to "Destroy", book_path(@bookDetail.id), :class=>"btn btn-danger btn-sm btn-block book_destroy", method: :delete, "data-confirm" => "本当に削除しますか？"  %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
