--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -18,10 +18,17 @@
       </div>
       <h2 class="mt-3">New book</h2>
       <%= form_with model:book, local:true do |f| %>
-        <label for="book_title">Title</label>
-        <%= f.text_field :title, :id=>"book_title" %>
-        <label for="book_opinion">Opinion</label>
-        <%= f.text_area :body, :id=>"book_opinion" %>
-        <%= f.submit 'Create Book', :class=>"btn btn-success" %>
+        <div class="form-group">
+          <label for="book_title">Title</label>
+          <%= f.text_field :title, :class=>"form-control book_title", :id=>"book_title" %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label>
+          <%= f.text_area :body, :class=>"form-control book_opinion", :id=>"book_opinion" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Create Book', :class=>"btn btn-success" %>
+        </div>
+        
       <% end %>
     </div>
