--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -14,7 +14,9 @@
         </tbody>
       </table>
       <div class="row">
-        <a class="btn btn-outline-secondary btn-block  edit_user_path" href="/users/:id/edit"><i class="fas fa-user-cog"></i></a>
+          <%= link_to edit_user_path(current_user), :class=> "btn btn-outline-secondary btn-block user_edit" do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
       <%= form_with model:book, local:true do |f| %>
@@ -29,6 +31,6 @@
         <div class="form-group">
           <%= f.submit 'Create Book', :class=>"btn btn-success" %>
         </div>
-        
+
       <% end %>
     </div>
