[add] flashメッセージ

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
   		  </div>
   		  <div class="form-group">
   		    <label for="user_introduction">Introduction</label>
-          <%= f.text_area :body, :class=>"form-control user_introduction", :id=>"user_introduction" %>
+          <%= f.text_area :introduction, :class=>"form-control user_introduction", :id=>"user_introduction" %>
   		  </div>
   		  <div class="form-group">
   		    <%= f.submit 'Update User', :class=>"btn btn-secondary" %>
