--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,8 @@
           </div>
         </div>
       </nav>
-
     </header>
+    <%= render 'layouts/notifications' %>
     <main>
 
     <%= yield %>
