--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,3 +1,14 @@
+    <% if book.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(book.errors.count, "error") %> prohibited this obj from being saved:</h2>
+        <ul>
+          <% book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    
     <div class="col-md-3">
       <h2>User info</h2>
       <%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.png", size: '60x60' %>
