--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,13 +3,23 @@
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
   		<h2>Editing Book</h2>
   		<%= form_with model:@book, local:true do |f| %>
+  		  <% if @book.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@book.errors.count, "error") %> prohibited this obj from being saved:</h2>
+            <ul>
+              <% @book.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
   		  <div class="form-group">
   		    <label for="book_title">Title</label>
           <%= f.text_field :title, :class=>"form-control book_title", :id=>"book_title" %>
   		  </div>
   		  <div class="form-group">
   		    <label for="book_opinion">Opinion</label>
-          <%= f.text_area :title, :class=>"form-control book_opinion", :id=>"book_opinion" %>
+          <%= f.text_area :body, :class=>"form-control book_opinion", :id=>"book_opinion" %>
   		  </div>
   		  <div class="form-group">
   		    <%= f.submit 'Update Book', :class=>"btn btn-success" %>
