--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-                  <%= link_to "Home", "/users/show", class: 'nav-link text-light' %>
+                  <%= link_to "Home", user_path(current_user), class: 'nav-link text-light' %>
                 </li>
                 <li>
                   <%= link_to "Users", "/users", class: 'nav-link text-light' %>
