--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,29 +24,45 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-                  <%= link_to "Home", user_path(current_user), class: 'nav-link text-light' %>
+                  <%= link_to user_path(current_user), class: 'nav-link text-light' do %>
+                  <i class="fas fa-home"> Home </i>
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Users", "/users", class: 'nav-link text-light' %>
+                  <%= link_to "/users", class: 'nav-link text-light' do %>
+                  <i class="fas fa-users"> Users </i>
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Books", "/books", class: 'nav-link text-light' %>
+                  <%= link_to "/books", class: 'nav-link text-light' do %>
+                  <i class="fas fa-book-open"> Books </i>
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "logout", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+                  <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-out-alt"> logout </i>
+                  <% end %>
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "Home", "/", class: 'nav-link text-light' %>
+                  <%= link_to "/", class: 'nav-link text-light' do %>
+                  <i class="fas fa-home"> Home </i>
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "About", "/about", class: 'nav-link text-light' %>
+                  <%= link_to "/about", class: 'nav-link text-light' do %>
+                  <i class="fas fa-link"> About </i>
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "sign up", new_user_registration_path, class: 'nav-link text-light' %>
+                  <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+                  <i class="fas fa-user-plus"> sign up </i>
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "login", new_user_session_path, class: 'nav-link text-light' %>
+                  <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-in-alt"> login </i>
+                  <% end %>
                 </li>
               <% end %>
             </ul>
