--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    
+
     <%= render 'users/info', user: @user, book: @book %>
-    
+
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
       <table class="table">
@@ -19,12 +19,14 @@
             <td>
               <%= @bookDetail.body %>
             </td>
+            <% if @bookDetail.user_id == current_user.id %>
             <td>
               <%= link_to "Edit", edit_book_path(@bookDetail.id), :class=>"btn btn-success btn-sm btn-block book_edit" %>
             </td>
             <td>
               <%= link_to "Destroy", book_path(@bookDetail.id), :class=>"btn btn-danger btn-sm btn-block book_destroy", method: :delete, "data-confirm" => "本当に削除しますか？"  %>
             </td>
+            <% end %>
           </tr>
         </tbody>
       </table>
