--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,8 @@
  */
 
  @import "bootstrap";
- @import "font-awesome-sprockets";
- @import "font-awesome"
+ @import 'font-awesome-sprockets';
+ @import 'font-awesome';
 
  div.field, div.actions{
   margin-bottom: 10px;
@@ -34,7 +34,11 @@
  .form_group{
   margin-bottom: 16px;
  }
- 
+
  #error_explanation{
   color:red;
+ }
+
+ .notice{
+  color:green;
  }
