--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
   </head>
 
   <body>
-    <header class="shadow-sm">
+    <header>
       <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
         <div class = "container">
-          <a class = "navbar-brand pl-5 pr-16" href="/">
+          <a class = "navbar-brand" href="/">
             <span>Bookers</span>
           </a>
-          <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navabarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <button class = "navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navabarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -50,7 +50,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to "/about", class: 'nav-link text-light' do %>
+                  <%= link_to home_about_path, class: 'nav-link text-light' do %>
                   <i class="fas fa-link"> About </i>
                   <% end %>
                 </li>
@@ -70,11 +70,13 @@
         </div>
       </nav>
     </header>
-    <%= render 'layouts/notifications' %>
-    <main>
 
+    <p><%= render 'layouts/notifications' %></p>
+
+    <main>
     <%= yield %>
     </main>
+
     <footer class="container mt-5">
       <div class="row">
         <div class="mx-auto">
