--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,6 +19,9 @@
             <td>
               <%= @bookDetail.body %>
             </td>
+            
+            <%= render 'favorite', book: @bookDetail%>
+            
             <% if @bookDetail.user_id == current_user.id %>
             <td>
               <%= link_to "Edit", edit_book_path(@bookDetail.id), :class=>"btn btn-success btn-sm btn-block book_edit" %>
