--- a/app/views/books/_favorite.html.erb
+++ b/app/views/books/_favorite.html.erb
@@ -1,6 +1,6 @@
 <% if book.favorited_by?(current_user) %>
-  <td>
-    <%= link_to book_favorites_path(book), method: :delete do %>
+  <td id="favorite_after">
+    <%= link_to book_favorites_path(book), class:"favorite_after", method: :delete do %>
       ♥<%= book.favorites.count %>
     <% end %>
   </td>
