--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,6 +22,10 @@
             
             <%= render 'favorite', book: @bookDetail%>
             
+            <td>
+              コメント数: <%= @bookDetail.book_comments.count %>
+            </td>
+            
             <% if @bookDetail.user_id == current_user.id %>
             <td>
               <%= link_to "Edit", edit_book_path(@bookDetail.id), :class=>"btn btn-success btn-sm btn-block book_edit" %>
@@ -33,6 +37,34 @@
           </tr>
         </tbody>
       </table>
+      <table class="comments">
+        <% @bookDetail.book_comments.each do |book_comment| %>
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(book_comment.user.id) do %>
+              <%= attachment_image_tag book_comment.user, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30' %><br><%= book_comment.user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= book_comment.comment %>
+            </td>
+            <% if book_comment.user == current_user %>
+              <td>
+                <%= link_to "Destroy", book_book_comment_path(book_comment.book,book_comment), :class=>"btn btn-danger btn-sm btn-block book_destroy", method: :delete, "data-confirm" => "本当に削除しますか？"  %>
+              </td>
+            <% end %>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+        
+      <div class="form-group">
+        <%= form_with(model:[@bookDetail, @book_comment], local: true) do |f| %>
+         <%= f.text_area :comment, class:"form-control", placeholder: "コメントをここに" %>
+         <%= f.submit "送信する" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
