--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -22,11 +22,23 @@
             <th>introduction</th>
             <th><%= user.introduction %></th>
           </tr>
+          <tr>
+            <th>follows</th>
+            <th><%= user.followings.count %></th>
+          </tr>
+          <tr>
+            <th>followers</th>
+            <th><%= user.followers.count %></th>
+          </tr>
         </tbody>
       </table>
       <div class="row">
-          <%= link_to edit_user_path(user.id), :class=> "btn btn-outline-secondary btn-block user_edit" do %>
-            <i class="fas fa-user-cog"></i>
+          <% if current_user == @user %>
+            <%= link_to edit_user_path(user.id), :class=> "btn btn-outline-secondary btn-block user_edit" do %>
+              <i class="fas fa-user-cog"></i>
+            <% end %>
+          <% else %>
+            <%= render 'relationships/follow_button', user: @user %>
           <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
