--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,6 +19,9 @@
           <tr>
             <td><%= attachment_image_tag user, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30' %></td>
             <td><%= user.name %></td>
+            <td>フォロー数：<%= user.followings.count %></td>
+            <td>フォロワー数：<%= user.followers.count %></td>
+            <td><%= render 'relationships/follow_button', user: user %></td>
             <td><%= link_to "Show", user_path(user) %></td>
           </tr>
         </tbody>
