--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,7 +21,9 @@
             <td><%= link_to attachment_image_tag(book.user, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30'), user_path(book.user.id) %></td>
             <td><%= link_to book.title, book_path(book.id) %></td>
             <td><%= book.body %></td>
-            <%= render 'favorite', book: book %>
+            <td id="index_favorites_button_<%= book.id %>">
+              <%= render 'favorites/favorite', book: book %>
+            </td>
             <td>コメント数: <%= book.book_comments.count %></td>
           </tr>
         </tbody>
