--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,17 +71,19 @@
       </nav>
     </header>
     
-    <div class="container">
-      <div class="row justify-content-center">
-        <%= form_with url: search_path, method: :get, local: true do |f| %>
-          <%= f.text_field :keyword %>
-          <%= f.select :range, options_for_select([["Book"], ["User"]]) %>
-          <%= f.select :way, options_for_select([["完全一致","perfect_match"],["部分一致","partial_match"],["前方一致","prefix_match"],["後方一致","backward_match"]]) %>
-          <%= f.submit '検索' %>
-        <% end %>
+    <% if user_signed_in? %>
+      <div class="container">
+        <div class="row justify-content-center">
+          <%= form_with url: search_path, method: :get, local: true do |f| %>
+            <%= f.text_field :keyword %>
+            <%= f.select :range, options_for_select([["Book"], ["User"]]) %>
+            <%= f.select :way, options_for_select([["完全一致","perfect_match"],["部分一致","partial_match"],["前方一致","prefix_match"],["後方一致","backward_match"]]) %>
+            <%= f.submit '検索' %>
+          <% end %>
+        </div>
       </div>
-    </div>
-
+    <% end %>
+    
     <p><%= render 'layouts/notifications' %></p>
 
     <main>
