--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -17,7 +17,7 @@
           <td><%= link_to attachment_image_tag(book.user, :profile_image, :fill, 30, 30, fallback: "no_image.png", size: '30x30'), user_path(book.user.id) %></td>
           <td><%= link_to book.title, book_path(book.id) %></td>
           <td><%= book.body %></td>
-          <%= render 'books/favorite', book: book %>
+          <%= render 'favorites/favorite', book: book %>
           <td>コメント数: <%= book.book_comments.count %></td>
         </tr>
       </tbody>
