--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
         <thead>
           <tr>
             <th></th>
-            <th>TItle</th>
+            <th>Title</th>
             <th>Opinion</th>
             <th colspan="3"></th>
           </tr>
